Add CodeScroll and NoCopy components on various pages

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/4-activities/2-test-your-knowledge.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/4-activities/2-test-your-knowledge.mdx
@@ -1,6 +1,7 @@
 ---
 title: Test Your Knowledge
 ---
+import CodeScroll from '/src/components/CodeScroll.astro'
 
 Here is a fun hello world program to wrap up this section.
 
@@ -16,6 +17,7 @@ You need to:
 Do this without referencing the material. You want to test that you know how to do this yourself. As you progress, you will be building and running many programs. So you need to know how to do this without thinking.
 :::
 
+<CodeScroll>
 ```cpp
 #include "splashkit.h"
 
@@ -115,6 +117,7 @@ int main()
     delay(2000);
 }
 ```
+</CodeScroll>
 
 :::note[Reminder]
 You're not expected to understand how the following code works at this point. It has been created for fun :)
