--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/4-activities/3-2-targets.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/4-activities/3-2-targets.mdx
@@ -3,7 +3,9 @@ title: Click Game
 sidebar:
     label: " - Click Game"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 For this activity, create a program that lets the user enter a number of targets to hit. Then, show a window that displays the number of targets left to hit, using a health-bar style graphic (a partially filled bar, based on proportion of initial target remaining). Draw a circle on the screen, and test if the user has clicked the circle. When they do click it, subtract one from the targets to be hit, ending when this is 0.
 
 ```txt
@@ -35,6 +37,7 @@ Here are some functions and procedures you may want to consider adding:
 - A function (target hit) to check if the user has clicked, and the mouse is inside the target circle.
 
 :::
+</NoCopy>
 
 :::note[Useful SplashKit functions:]
 
