--- a/src/content/docs/book/part-2-organised-code/2-structuring-data/4-activities/3-2-game.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-structuring-data/4-activities/3-2-game.mdx
@@ -3,7 +3,9 @@ title: Explore Game States
 sidebar:
     label: " - Explore Game States"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 Create a small program that explores different game states to allow you to switch between different logic for menus, or other screens within an interactive program.
 
 Use an enumeration to represent the different game states: playing, showing details, or showing menu.
@@ -59,3 +61,4 @@ You could consider using the [`point_2d`](https://splashkit.io/api/types/#point-
 The [SplashKit Colors](https://splashkit.io/guides/color/splashkit-colors/) page has a grid with all SplashKit's [Color](https://splashkit.io/api/color/) options in the "Color Palette" section.
 
 :::
+</NoCopy>
