--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/4-activities/3-1-database.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/4-activities/3-1-database.mdx
@@ -3,7 +3,9 @@ title: Product Database
 sidebar:
     label: " - Product Database"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 Create a program that will manage the data associated with a shop's products.
 
 The shop will have:
@@ -68,3 +70,4 @@ Also have a **product data** struct. You can use this to store the data for one 
 Several of the features will require a search function. You can return the index of the product the user selected, and then the caller can determine what to do with the product selected.
 
 :::
+</NoCopy>
