--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/4-activities/3-2-music-player.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/4-activities/3-2-music-player.mdx
@@ -3,7 +3,9 @@ title: Music Player
 sidebar:
     label: " - Music player"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 Create a music player. This will allow the user to load and play songs, marking songs as ones they love, and keeping track of how many times songs are played.
 
 The music player will have:
@@ -73,3 +75,4 @@ Also have a **song data** struct. You can use this to store the data for one son
 Several of the features will require a search function. You can return the index of the song the user selected, and then the caller can determine what to do with the song selected.
 
 :::
+</NoCopy>
