--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/4-activities/3-3-game.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/4-activities/3-3-game.mdx
@@ -3,7 +3,9 @@ title: Rock Dodge Game
 sidebar:
     label: " - Rock Dodge"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 Create a rock dodge game.
 
 The rock dodge game will have:
@@ -67,3 +69,4 @@ Also have a **rock data** struct. You can use this to store the data for one roc
 You can consider using the [point_2d](https://splashkit.io/api/types/#point-2d) or [circle](https://splashkit.io/api/types/#circle) structs. If you are adventurous you could look at using bitmaps for the rocks and players.
 
 :::
+</NoCopy>
