--- a/src/content/docs/book/part-2-organised-code/4-member-functions/4-activities/3a-user.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-member-functions/4-activities/3a-user.mdx
@@ -3,7 +3,9 @@ title: User Account
 sidebar:
     label: " - User Account"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 Create a class to represent a user account. This should have a username and a password. The password should be kept private, so that it cannot be read outside the class. The system will have a single user, which is set when the program starts. Allow the user to test the login, and to change their password. The change password method should accept the current password, and the new password, and only update the password if the existing passwords match. The code should also check the new password was not the previous password. You may choose to add additional constraints on the password as well.
 
 ```txt
@@ -51,3 +53,4 @@ New Password: 123Er
 :::note
 Don't worry that the password is showing in the terminal at this stage. Focus on the coding, and the access to this data within your program for now.
 :::
+</NoCopy>
