--- a/src/content/docs/book/part-2-organised-code/4-member-functions/4-activities/3b-dice.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-member-functions/4-activities/3b-dice.mdx
@@ -3,7 +3,9 @@ title: Dice
 sidebar:
     label: " - Dice"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 Create a class to represent a `die` (a single dice). This can have a number of sides, which cannot change after it is created. The die will also have a current value, being the value visible on top when the die is rolled. The die can be rolled, which randomises the value shown on top based on the number of sides. The current value can be read, but not changed by other code. Include a method to print the details of the die, including its sides and current value so that it can be shown in the test code.
 
 ```txt
@@ -39,3 +41,4 @@ Sides: 20
 > 1
 20 sides: value is 12
 ```
+</NoCopy>
