--- a/src/content/docs/book/part-2-organised-code/6-indirect-access/4-activities/3-2-reaction-game.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-indirect-access/4-activities/3-2-reaction-game.mdx
@@ -3,7 +3,9 @@ title: Reaction game
 sidebar:
     label: " - Reaction game"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 Create a small target clicking game that works on reaction time to scale difficulty. When the game starts, fill a circle on the screen in a random location. The objective is to click this as quickly as possible.
 
 When the target is clicked, move it to a new position and adjust the radius to be proportional to the time taken. If the user takes more than 1 second (1000ms) make the circle slowly grow larger.
@@ -19,6 +21,7 @@ Make sure to create a game struct, which should contain the details for the targ
 Use pass-by-reference so that update game and handle input can update the game based on user interactions. Test out what happens when you remove the `&`. Make sure to use pass by reference in draw game - think about why this would be useful.
 
 :::
+</NoCopy>
 
 :::note[Useful SplashKit functions and types:]
 
