--- a/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/4-music.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/4-music.mdx
@@ -3,7 +3,10 @@ title: Simple Music Player
 sidebar:
   label: " - Simple Music Player"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
+import CodeScroll from '/src/components/CodeScroll.astro'
 
+<NoCopy>
 With control flow we can now build a simple music player that lets the user load and play songs.
 This program will:
 
@@ -17,6 +20,7 @@ This program will:
 
 Here is an example of the output from this:
 
+<CodeScroll maxHeight="600px">
 ```txt
 Welcome to my simple music player
 
@@ -76,6 +80,8 @@ Option: 4
 
 Bye
 ```
+</CodeScroll>
+</NoCopy>
 
 :::tip
 You can check if [Load Music](https://splashkit.io/api/audio/#load-music) succeeded by calling [Has Music](https://splashkit.io/api/audio/#has-music). If this returns false, then it failed to load the music.
