--- a/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/5-events.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/5-events.mdx
@@ -3,7 +3,9 @@ title: Explore event loops
 sidebar:
   label: " - Explore event loops"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 With interactive programs you can use control flow to create event loop that allow you to respond to things that change - such as interactive user input, button presses, temperature changes, etc.
 
 For this program, create a graphical application that has the following events:
@@ -16,3 +18,4 @@ For this program, create a graphical application that has the following events:
   - if the user presses "l", set the radius to 100
 - If the user clicks, draw a circle at the current mouse x and mouse y in a random color (using the radius)
 - If the user presses "5", draw 100 random circles to the screen
+</NoCopy>
