--- a/src/content/docs/book/part-2-organised-code/2-structuring-data/4-activities/3-1-entity.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-structuring-data/4-activities/3-1-entity.mdx
@@ -3,7 +3,9 @@ title: Entity Manager
 sidebar:
     label: " - Entity Manager"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 Create a program that lets the user enter and display details associated with a book. This should include your own struct to manage the book data, with a function to read in the book, and a procedure to output the details of the book. Also show a simple menu, with an associated enumeration. Use the enumeration in a read menu option function.
 
 An example of this running is shown below:
@@ -40,3 +42,4 @@ Make sure you have a [struct](/book/part-2-organised-code/2-structuring-data/5-r
 You should also have an [enumeration](/book/part-2-organised-code/2-structuring-data/5-reference/03-02-enum) for the menu options, and a function for [reading data from the user](/book/part-2-organised-code/2-structuring-data/3-guided-tour/0-1-explore-enums/#reading-data-from-the-user) that returns one of the enum values based on what the user chose (read menu option).
 
 :::
+</NoCopy>
