--- a/src/content/docs/book/part-2-organised-code/4-member-functions/5-reference/1-2-methods.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-member-functions/5-reference/1-2-methods.mdx
@@ -3,6 +3,7 @@ title: Methods
 sidebar:
     label: " - Methods"
 ---
+import CodeScroll from '/src/components/CodeScroll.astro'
 
 Method are functions or procedures that are declared within the scope of a struct. This is similar to our existing functions and procedures where we had passed a reference or pointer to the struct in as a parameter. Now, with the method declared within the struct, it will have direct access to the fields and other methods without needing additional parameters.
 
@@ -32,6 +33,7 @@ To achieve this, C++ added a `this` keyword which is a pointer to object upon wh
 
 The following example creates a die struct, which represents a single dice from a board or roll playing game. If we picture a die, it will need to *know* how many sides it has, and its current value (the one on top when rolled). We then need a method to *roll* the dice, and we can use a method to access the current value.
 
+<CodeScroll maxHeight="700px">
 ```cpp
 #include "splashkit.h"
 
@@ -102,5 +104,6 @@ int main()
   return 0;
 }
 ```
+</CodeScroll>
 
 Notice how in the code we need to use `this` in the constructor as the `sides` parameter has the same name as the `sides` field. This is a good example of when the `this` keyword can come in handy. We cannot directly access the `sides` field, as the compiler will assume we mean the parameter if we use the `sides` identifier. Make it `this->sides` tells the compiler to look at the `sides` field within the current object (`this->`).
