Custom aside component  - seperate styles from titles

--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/03-1-if.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/03-1-if.mdx
@@ -3,7 +3,7 @@ title: If Statement
 sidebar:
   label: " - If Statement"
 ---
-import { Aside } from '@astrojs/starlight/components';
+import Aside from '/src/components/Aside.astro'
 import MySwiper from '../../../../../../components/react/myswiper.jsx'
 
 import Slide01if from './images/control-flow-statements-in-depth/control-flow-if-statement/Slide1.png';
@@ -279,7 +279,7 @@ export const sliderImagesIfElseIfStatement = [
   }
 ];
 
-<Aside type="note" title="In Brief">
+<Aside type="summary" title="In Brief">
   ![If example code](./images/if-code.png)
 
   #### The if statement...
