--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/03-2-case.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/03-2-case.mdx
@@ -3,7 +3,7 @@ title: Case Statement
 sidebar: 
   label: " - Case Statement"
 ---
-import { Aside } from '@astrojs/starlight/components';
+import Aside from '/src/components/Aside.astro'
 import MySwiper from '../../../../../../components/react/myswiper.jsx'
 
 import caseStatementSlide01 from './images/control-flow-statements-in-depth/control-flow-case-statement/Slide1.png';
@@ -124,7 +124,7 @@ export const sliderImagesCaseStatement = [
   }
 ];
 
-<Aside type="note" title="In Brief">
+<Aside type="summary" title="In Brief">
   ![Switch illustration code](./images/switch-code.png)
 
   #### Case statements...
