--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/04-2-do-while.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/04-2-do-while.mdx
@@ -4,7 +4,7 @@ sidebar:
   label: " - Do While Loop"
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import Aside from '/src/components/Aside.astro'
 import MySwiper from '../../../../../../components/react/myswiper.jsx'
 
 import doWhileLoopSlide01 from './images/control-flow-statements-in-depth/control-flow-do-while-loop/Slide1.png';
@@ -106,7 +106,7 @@ export const sliderImagesDoWhileLoop = [
   }
 ];
 
-<Aside type="note" title="In Brief">
+<Aside type="summary" title="In Brief">
   ![Illustration of a do while loop](./images/do-while-code.png)
 
   #### The do while loop...
