--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/07-indentation.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/07-indentation.mdx
@@ -1,9 +1,9 @@
 ---
 title: Indentation
 ---
-import { Aside } from '@astrojs/starlight/components';
+import Aside from '/src/components/Aside.astro'
 
-<Aside type="note" title="In Brief">
+<Aside type="summary" title="In Brief">
   ![Illustration of indentation](./images/indentation.png)
 
   #### Indentation...
