--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/04-1-while-loop.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/04-1-while-loop.mdx
@@ -3,7 +3,7 @@ title: While Loop
 sidebar:
   label: " - While Loop"
 ---
-import { Aside } from '@astrojs/starlight/components';
+import Aside from '/src/components/Aside.astro'
 import MySwiper from '../../../../../../components/react/myswiper.jsx'
 
 import whileLoopSlide01 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide1.png';
@@ -292,7 +292,7 @@ export const sliderImagesWhileSplashKitLoop = [
   }
 ];
 
-<Aside type="note" title="In Brief">
+<Aside type="summary" title="In Brief">
   ![Example while loop](./images/while-code.png)
 
   #### The while loop...
