--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/3-guided-tour/02-00-change-calculator.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/3-guided-tour/02-00-change-calculator.mdx
@@ -3,11 +3,34 @@ title: Change Calculator
 banner: 
   content: This is an optional tour - use it to extend your understanding.
 ---
+
+export const output_example = `Cost of item (in cents): 15
+Amount paid (in cents): 500
+Change: 2 x $2, 0 x $1, 1 x 50c, 1 x 20c, 1 x 10c, 1 x 5c
+
+Run again? Y/n: Y
+Cost of item (in cents): 150
+Amount paid (in cents): 100
+Insufficient payment
+
+Run again? Y/n: Y
+Cost of item (in cents): 150
+Amount paid (in cents): 250
+Change: 0 x $2, 1 x $1, 0 x 50c, 0 x 20c, 0 x 10c, 0 x 5c
+
+Run again? Y/n: y
+...
+`;
+
+import Carousel from '/src/components/Carousel.astro'
+import Aside from '/src/components/Aside.astro'
 import { Accordion, AccordionItem } from 'accessible-astro-components'
+import { Code } from 'astro-expressive-code/components'
+import { Steps } from '@astrojs/starlight/components';
 
 For our next project, let's build a change calculator.
 
-This program will perform the steps to calculate the ideal change to give for a purchase. For example, for $6.50 in change it should give you three $2 coins and one 50c coin.
+This program will calculate the ideal change, in coins, to give for a purchase. For example, for $6.50 in change it should give you three $2 coins and one 50c coin.
 
 ```bash title="Terminal output example (not code)"
 Cost of item (in cents): 15
@@ -25,7 +48,7 @@ Amount paid (in cents): 250
 Change: 0 x $2, 1 x $1, 0 x 50c, 0 x 20c, 0 x 10c, 0 x 5c
 
 Run again? Y/n: Y
-Cost of item (in cents): 175 
+Cost of item (in cents): 175
 Amount paid (in cents): 200
 Change: 0 x $2, 0 x $1, 0 x 50c, 1 x 20c, 0 x 10c, 1 x 5c
 
@@ -34,23 +57,73 @@ Run again? Y/n: n
 
 Requirements:
 
-- The user will enter a cost and amount paid, and the system will output the ideal change to the given.
+- The user will enter a cost and amount paid, and the system will output the ideal change in coins.
 - Allow the user to give change multiple times
 - Ensure that the program does not crash when the user enters unexpected text for the cost or payment.
 - Do not calculate change if the payment is insufficient.
 
+Before starting, let's identify how we'll structure the code.
+
+<Aside type="thinking" title="Figuring out the structure...">
+<Carousel animation="fade" buttonLayout="bottom" panelAlignment="top">
+  <div>
+    <Code code={output_example} lang="c++" mark={{range: "1-5"}}/>
+    First, we can see that our program goes through its set of steps once...
+  </div>
+  <div>
+      <Code code={output_example} lang="c++" mark={{range: "6-10"}}/>
+
+    ...then repeats itself...
+  </div>
+  <div>
+      <Code code={output_example} lang="c++" mark={{range: "11-15"}}/>
+
+    and repeats itself again, and so on. So we'll want some sort of loop around the main program code.
+  </div>
+  <div>
+      <Code code={output_example} lang="c++" mark={/[0-9]* x \$2, /g}/>
+
+    Within each run, we can also see...
+  </div>
+  <div>
+      <Code code={output_example} lang="c++" mark={/[0-9]* x \$1, /g}/>
+
+    ...another set of repeated steps...
+  </div>
+  <div>
+      <Code code={output_example} lang="c++" mark={/[0-9]* x 50c, /g}/>
+
+    ...but these take different data (different types of coins), and output results...
+  </div>
+  <div>
+      <Code code={output_example} lang="c++" mark={/([0-9]* x (20|10|5)c)/g}/>
+
+    ...so a function might be a good way to help us calculate our change. We can call the same function multiple times with different _data_, to compute the coins to give for each coin type.
+  </div>
+</Carousel>
+</Aside>
+
+
 ## Calculating the change to give
 
-To get started, let's add the code to read in the cost of the item, and the amount paid. We can keep this simple to start, with the basic sequence for these.
+To get started, let's add the code to read in the cost of the item, the amount paid, and calculate the amount of change to give. We can keep this simple to start, with a basic sequence for these. We will also re-use our `read_intger` function from the previous pages, to validate input and make our code more expressive.
 
-1. Create the variables you will need. Think about the values you will need to determine the amount of change to be given.
+<Steps>
+1. Create a `main` function, and create the variables you will need inside it. Think about the values you will need to determine the amount of change to be given. Have a go at this yourself, see if you can get something similar to the following output:
+    ```
+    Cost of item (in cents): 15
+    Amount paid (in cents): 500
+    Change to give: 485
 
+    ```
+    _Note that we're using cents rather than dollars - we can use integers in this case._
+
+    Make sure to have a go at it yourself first! If you find yourself stuck, feel through to check here and compare it with how you've approached it.
     <Accordion>
       <AccordionItem header="Code to calculate change">
 
     For this we will need the following variables:
 
-    - `string line;` which can store the input the user enters.
     - `int cost_of_item;` to store the cost as an integer (in cents).
     - `int amount_paid;` to store the amount paid in cents.
     - `int change_value;` to store the value of the change to be given.
@@ -58,95 +131,25 @@ To get started, let's add the code to read in the cost of the item, and the amou
     ```c++
     #include "splashkit.h"
 
+    // add read string, read integer, and read integer range here
+
     int main()
     {
-        string line;
         int cost_of_item;
         int amount_paid;
         int change_value;
 
-        write_line("Cost of item in cents: ");
-        line = read_line();
-        cost_of_item = to_integer(line);
-
-        write_line("Payment in cents: ");
-        line = read_line();
-        amount_paid = to_integer(line);
+        cost_of_item = read_integer("Cost of item in cents: ");
+        amount_paid = read_integer("Payment in cents: ");
 
         change_value = amount_paid - cost_of_item;
+
         write_line("Change to give " + to_string(change_value));
     }
     ```
 
       </AccordionItem>
     </Accordion>
-
-2. While we are reading in these values from the user, let's make sure that the program does not crash when the user enters anything other than a number.
-   
-    When the user enters text other than a whole number for the cost or payment, then the program will crash (try it!). This is never a good thing, and we have to expect that users will make errors (intentionally or by mistake).
-
-    :::tip
-    Validations are an important part of every program. You have to anticipate the different ways that users can cause your program problems.
-    :::
-
-    For this, let's look at the code we have at the moment. The code that we have looks like this:
-
-    ```c++
-        line = read_line();
-        cost_of_item = to_integer(line);
-    ```
-
-    This reads in text from the user and stores it in `line`. We want this as a number, so we use SplashKit's `to_integer` method and pass it the data in `line`.  If the data is not a number, `to_integer` raises an error that causes the program to crash.
-
-    In the menu program we added a loop to ensure that the user's data is a number. We can use that same logic here. The logic for this looks like this:
-
-    ![Flowchart for control flow to perform validation](./images/change-calc-3-validation.png)
-
-    For this we are using a [while](/book/part-1-instructions/3-control-flow/5-reference/04-1-while-loop) loop, as we have different messages based on valid and invalid data entry. The loop will need to test if the line entered by the user is **not** an integer, and repeat the code when that is true.
-
-    Have a go at implementing this yourself now. Start with the cost of the item, and then update the payment as well. Test it out and try breaking this with different combinations of errors. Make sure it also works with valid integers.
-
-    <Accordion>
-      <AccordionItem header="Code for validating input">
-
-    ```c++ {12-17,23-28}
-    #include "splashkit.h"
-
-    int main()
-    {
-        string line;
-        int cost_of_item;
-        int amount_paid;
-        int change_value;
-
-        write("Cost of item in cents: ");
-        line = read_line();
-        while (!is_integer(line))
-        {
-            write_line("Please enter a whole number.");
-            write("Cost of item in cents: ");
-            line = read_line();
-        }
-
-        cost_of_item = to_integer(line);
-
-        write("Payment in cents: ");
-        line = read_line();
-        while (!is_integer(line))
-        {
-            write_line("Please enter a whole number.");
-            write("Payment in cents: ");
-            line = read_line();
-        }
-
-        amount_paid = to_integer(line);
-
-        change_value = amount_paid - cost_of_item;
-        write_line("Change to give " + to_string(change_value));
-    }
-    ```
-
-      </AccordionItem>
-    </Accordion>
+</Steps>
 
 You are now at a point where you have the change calculator reliably reading in the information it needs. Next we can calculate and output the change values.
